renamed model and added file for control code

--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,10 @@
-motor_param_test_slrt_rtw/*
+model_slrt_rtw/*
 slprj/*
-motor_param_test.mldatx
-motor_param_test.xml
-motor_param_testbio.m
-motor_param_testpt.m
-motor_param_testref.m
-motor_param_testri.m
-motor_param_testxcp.m
+model.mldatx
+model.xml
+modelbio.m
+modelpt.m
+modelref.m
+modelri.m
+modelxcp.m
 *.asv
