--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,10 @@
-model_slrt_rtw/*
-slprj/*
-model.mldatx
-model.xml
-modelbio.m
-modelpt.m
-modelref.m
-modelri.m
-modelxcp.m
+simulink/model_slrt_rtw/*
+simulink/slprj/*
+simulink/model.mldatx
+simulink/model.xml
+simulink/modelbio.m
+simulink/modelpt.m
+simulink/modelref.m
+simulink/modelri.m
+simulink/modelxcp.m
 *.asv
